@@ -1,4 +1,5 @@
 /*
+ * Copyright (c) 2026 Contributors to the Eclipse Foundation.
  * Copyright (c) 2023 Eclipse Foundation and/or its affiliates. All rights reserved.
  *
  * This program and the accompanying materials are made available under the
@@ -19,6 +20,7 @@ package org.glassfish.main.test.app.security.jsp2sful;
 import java.io.File;
 import java.lang.System.Logger;
 import java.net.HttpURLConnection;
+import java.net.URI;
 import java.net.URL;
 
 import org.glassfish.main.itest.tools.FormAuthHttpClient;
@@ -106,7 +108,7 @@ public class JspToStatefulAuthTest {
         earArchive.as(ZipExporter.class).exportTo(earFile, true);
         assertThat(ASADMIN.exec("deploy", "--target", "server", earFile.getAbsolutePath()), asadminOK());
 
-        baseUrl = new URL("http://localhost:8080/jsp2sful");
+        baseUrl = URI.create("http://localhost:8080/jsp2sful").toURL();
     }
 
 
