@@ -1,4 +1,5 @@
 /*
+ * Copyright (c) 2026 Contributors to the Eclipse Foundation.
  * Copyright (c) 1997, 2018 Oracle and/or its affiliates. All rights reserved.
  *
  * This program and the accompanying materials are made available under the
@@ -110,7 +111,7 @@ public class Client {
 
             System.out.println("invoking webclient servlet at " + url);
 
-            URL u = new URL(url);
+            URL u = URI.create(url).toURL();
 
             HttpURLConnection c1 = (HttpURLConnection)u.openConnection();
             int code = c1.getResponseCode();
