@@ -1,4 +1,5 @@
 /*
+ * Copyright (c) 2026 Contributors to the Eclipse Foundation.
  * Copyright (c) 2017, 2018 Oracle and/or its affiliates. All rights reserved.
  *
  * This program and the accompanying materials are made available under the
@@ -160,7 +161,7 @@ public class HttpBasicAuthTest implements Runnable {
 
         System.out.println(Thread.currentThread().getName() +
                            " - running ...");
-        URL u = new URL(url);
+        URL u = URI.create(url).toURL();
         URLConnection uconn = u.openConnection();
 
         String up = username + ":" + password;
