@@ -1,4 +1,5 @@
 /*
+ * Copyright (c) 2026 Contributors to the Eclipse Foundation.
  * Copyright (c) 2013, 2018 Oracle and/or its affiliates. All rights reserved.
  *
  * This program and the accompanying materials are made available under the
@@ -446,7 +447,7 @@ public class Client {
         
         System.out.println("Invoking servlet with HTTP method: " + httpMethod);
         
-        URL u = new URL(url);
+        URL u = URI.create(url).toURL();
         HttpURLConnection c1 = (HttpURLConnection) u.openConnection();
         c1.setRequestMethod(httpMethod);
         
@@ -485,7 +486,7 @@ public class Client {
                 }
             }
         } else if (code == HttpURLConnection.HTTP_MOVED_TEMP) {
-            URL redir = new URL(c1.getHeaderField("Location"));
+            URL redir = URI.create(c1.getHeaderField("Location")).toURL();
             String line = "Servlet redirected to: " + redir.toString();
             output.append(line);
             System.out.println(line);
