@@ -1,4 +1,5 @@
 /*
+ * Copyright (c) 2026 Contributors to the Eclipse Foundation.
  * Copyright (c) 1997, 2018 Oracle and/or its affiliates. All rights reserved.
  *
  * This program and the accompanying materials are made available under the
@@ -54,8 +55,8 @@ public class WebTest {
 
     public void doTest() throws Exception {
 
-        URL url = new URL("http://" + host  + ":" + port
-                          + contextRoot + "/From");
+        URL url = URI.create("http://" + host  + ":" + port
+                          + contextRoot + "/From").toURL();
         System.out.println("Connecting to: " + url.toString());
 
         long start = System.currentTimeMillis();
