@@ -1,4 +1,5 @@
 /*
+ * Copyright (c) 2026 Contributors to the Eclipse Foundation.
  * Copyright (c) 2013, 2018 Oracle and/or its affiliates. All rights reserved.
  *
  * This program and the accompanying materials are made available under the
@@ -70,8 +71,8 @@ public class WebTest {
     }
 
     private void invokeTestServlet() throws Exception {
-        URL url = new URL("http://" + host  + ":" +
-                          port + contextRoot + "/test");
+        URL url = URI.create("http://" + host  + ":" +
+                          port + contextRoot + "/test").toURL();
         System.out.println("Invoking URL: " + url.toString());
         HttpURLConnection conn = (HttpURLConnection) url.openConnection();
         conn.connect();
