@@ -1,4 +1,5 @@
 /*
+ * Copyright (c) 2026 Contributors to the Eclipse Foundation.
  * Copyright (c) 1997, 2018 Oracle and/or its affiliates. All rights reserved.
  *
  * This program and the accompanying materials are made available under the
@@ -74,7 +75,7 @@ public class WebTest {
 
         String jsessionId = accessIndexDotJsp();
         String redirect = accessLoginPage(jsessionId);
-        String jsessionIdSSO = followRedirect(new URL(redirect).getPath(),
+        String jsessionIdSSO = followRedirect(URI.create(redirect).toURL().getPath(),
                                               jsessionId);
 
         if (jsessionIdSSO != null) {
