@@ -1,4 +1,5 @@
 /*
+ * Copyright (c) 2026 Contributors to the Eclipse Foundation.
  * Copyright (c) 1997, 2018 Oracle and/or its affiliates. All rights reserved.
  *
  * This program and the accompanying materials are made available under the
@@ -42,8 +43,8 @@ public class WebTest{
         try {
             stat.addDescription("Trace not allowed test");
 
-            URL url = new URL("http://" + host  + ":" + port + contextRoot
-                          + "/ServletTest");
+            URL url = URI.create("http://" + host  + ":" + port + contextRoot
+                          + "/ServletTest").toURL();
             System.out.println("Invoking url: " + url.toString());
 
             HttpURLConnection conn = (HttpURLConnection) url.openConnection();
