@@ -1,4 +1,5 @@
 /*
+ * Copyright (c) 2026 Contributors to the Eclipse Foundation.
  * Copyright (c) 1997, 2018 Oracle and/or its affiliates. All rights reserved.
  *
  * This program and the accompanying materials are made available under the
@@ -62,7 +63,7 @@ public class WebTest {
 
         String url = "http://" + host + ":" + port + contextRoot + urlPattern;
         HttpURLConnection conn = (HttpURLConnection)
-            (new URL(url)).openConnection();
+            URI.create(url).toURL().openConnection();
         conn.setRequestProperty("Authorization", "Basic amF2YWVlOmphdmFlZQ==");
         conn.connect();
 
