@@ -1,4 +1,5 @@
 /*
+ * Copyright (c) 2026 Contributors to the Eclipse Foundation.
  * Copyright (c) 2009, 2018 Oracle and/or its affiliates. All rights reserved.
  *
  * This program and the accompanying materials are made available under the
@@ -21,6 +22,7 @@ import java.io.OutputStream;
 import java.io.OutputStreamWriter;
 import java.io.Writer;
 import java.net.HttpURLConnection;
+import java.net.URI;
 import java.net.URL;
 import java.net.URLEncoder;
 
@@ -73,7 +75,7 @@ public class BundleUtil {
 
     public void invokeURL(String url, String[] parameters) {
         try {
-            URL u = new URL(url);
+            URL u = URI.create(url).toURL();
             HttpURLConnection connection = (HttpURLConnection) u.openConnection();
             connection.setRequestMethod("POST");
             connection.setDoOutput(true);
