@@ -1,4 +1,5 @@
 /*
+ * Copyright (c) 2026 Contributors to the Eclipse Foundation.
  * Copyright (c) 1997, 2018 Oracle and/or its affiliates. All rights reserved.
  *
  * This program and the accompanying materials are made available under the
@@ -58,7 +59,7 @@ public class HelloJSPTestNG {
 
         String testurl = "http://" + host  + ":" + port + "/"+ strContextRoot + "/hello.jsp";
         //System.out.println("URL is: "+testurl);
-        URL url = new URL(testurl);
+        URL url = URI.create(testurl).toURL();
         //echo("Connecting to: " + url.toString());
         HttpURLConnection conn = (HttpURLConnection) url.openConnection();
         conn.connect();
@@ -97,7 +98,7 @@ public class HelloJSPTestNG {
         //
     String testurl = "http://" + host  + ":" + port;
         //System.out.println("URL is: "+testurl);
-        URL url = new URL(testurl);
+        URL url = URI.create(testurl).toURL();
         //echo("Connecting to: " + url.toString());
         HttpURLConnection conn = (HttpURLConnection) url.openConnection();
         conn.connect();
@@ -129,7 +130,7 @@ public class HelloJSPTestNG {
 
         String testurl = "http://" + host  + ":" + port + "/"+ strContextRoot + "/first.html";
         //System.out.println("URL is: "+testurl);
-        URL url = new URL(testurl);
+        URL url = URI.create(testurl).toURL();
         //echo("Connecting to: " + url.toString());
         HttpURLConnection conn = (HttpURLConnection) url.openConnection();
         conn.connect();
@@ -169,7 +170,7 @@ public class HelloJSPTestNG {
 
         String testurl = "http://" + host  + ":" + port + "/"+ strContextRoot + "/simpleservlet";
         //System.out.println("URL is: "+testurl);
-        URL url = new URL(testurl);
+        URL url = URI.create(testurl).toURL();
         //echo("Connecting to: " + url.toString());
         HttpURLConnection conn = (HttpURLConnection) url.openConnection();
         conn.connect();
