@@ -1,4 +1,5 @@
 /*
+ * Copyright (c) 2026 Contributors to the Eclipse Foundation.
  * Copyright (c) 2021 Contributors to Eclipse Foundation.
  * Copyright (c) 1997, 2018 Oracle and/or its affiliates. All rights reserved.
  *
@@ -53,7 +54,7 @@ public class JSFInjectionTestNG {
             boolean testPass = false;
 
             String testUrl = "http://" + host + ":" + port + "/" + strContextRoot + "/jsfHello.xhtml";
-            URL url = new URL(testUrl);
+            URL url = URI.create(testUrl).toURL();
             HttpURLConnection conn = (HttpURLConnection) url.openConnection();
             conn.connect();
             int responseCode = conn.getResponseCode();
