@@ -1,4 +1,5 @@
 /*
+ * Copyright (c) 2026 Contributors to the Eclipse Foundation.
  * Copyright (c) 2021 Contributors to Eclipse Foundation.
  * Copyright (c) 2014, 2018 Oracle and/or its affiliates. All rights reserved.
  *
@@ -22,7 +23,7 @@ import org.testng.Assert;
 
 import java.lang.reflect.*;
 import java.io.*;
-import java.net.URL;
+import java.net.URI;
 import java.net.URLConnection;
 
 /**
@@ -84,7 +85,7 @@ public class CheckTesterUITestNG {
     public static String wget(String url) throws Exception {
         BufferedReader in = null;
         try {
-            in = new BufferedReader(new InputStreamReader(new URL(url).openConnection().getInputStream()));
+            in = new BufferedReader(new InputStreamReader(URI.create(url).toURL().openConnection().getInputStream()));
             StringBuilder response = new StringBuilder();
 
             String inputLine;
